[package]
name = "issue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.6.20", features = ["tracing", "http2", "macros"]}
diesel = { version = "2.1.1", features = ["postgres", "chrono", "uuid"] }
diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
bb8 = "0.8.1"
meilisearch-sdk = "0.24.2"
